<resources>

    <string name="app_name">Inclen</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="login_">LOGIN</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="base_url">http://13.235.206.126/</string>
    <string name="projectNameOne">Project Name 1</string>
    <string name="createdAtSomeX">Created date: 20-12-2021</string>
    <string name="actions">Actions</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="sync">Sync</string>
    <string name="help">Help</string>
    <string name="baseline_survey">Baseline Survey</string>
    <string name="endline_survey">Endline Survey</string>
    <string name="draw_polygon">Draw Polygon</string>
    <string name="draw_line">Draw Line</string>
    <string name="getProjects">http://13.235.206.126/api/project/</string>
    <string name="getSurvey">http://13.235.206.126/api/survey/</string>
    <string name="getQuesltions">http://13.235.206.126/api/survey/</string>
    <string name="sync_url">http://13.235.206.126/api/survey</string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>

</resources>