<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProjectOverView"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hapticFeedbackEnabled="true"
            android:background="@color/blue"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrillview">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:text="Overview"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/robotomedium"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:layout_gravity="center"
                    android:theme="@style/Theme.MaterialComponents.DayNight">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:weightSum="3">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="3dp"
                            android:background="#A0C1FF" />
                        <TextView
                            android:id="@+id/surveyno"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="122"
                            android:textStyle="bold"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Completed Survey"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:layout_gravity="center"
                    android:theme="@style/Theme.MaterialComponents.DayNight">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:weightSum="3">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="3dp"
                            android:background="#FFD4A0" />
                        <TextView
                            android:id="@+id/partialsurveyno"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="00"
                            android:textStyle="bold"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Partial Survey"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:layout_gravity="center"
                    android:theme="@style/Theme.MaterialComponents.DayNight">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:weightSum="3">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="3dp"
                            android:background="#A0FFC6" />
                        <TextView
                            android:id="@+id/syncsurveyno"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="14"
                            android:textStyle="bold"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Sync Survey"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="16dp"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:text="@string/actions"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/robotomedium"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginHorizontal="15sp">

                    <LinearLayout
                        android:id="@+id/addEntry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:paddingHorizontal="15sp"
                        android:layout_margin="5dp"
                        android:background="@drawable/tiles_background"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/add_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add"
                            android:layout_weight="2"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:padding="10dp"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/editEntry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:paddingHorizontal="15sp"
                        android:layout_margin="5dp"
                        android:background="@drawable/tiles_background"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/edit_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:layout_weight="2"
                            android:textColor="@color/orange"
                            android:textSize="16sp"
                            android:padding="10dp"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginHorizontal="15sp">

                    <LinearLayout
                        android:id="@+id/syncEntry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:paddingHorizontal="15sp"
                        android:layout_margin="5dp"
                        android:background="@drawable/tiles_background"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/sync_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sync"
                            android:layout_weight="2"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:padding="10dp"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/helpEntry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_weight="1"
                        android:paddingHorizontal="15sp"
                        android:layout_margin="5dp"
                        android:background="@drawable/tiles_background"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/help_outline_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/help"
                            android:layout_weight="2"
                            android:textColor="@color/orange"
                            android:textSize="16sp"
                            android:padding="10dp"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>